--- a/hooks/build
+++ b/hooks/build
@@ -1,3 +1,7 @@
 #!/usr/bin/env sh
 
-docker build --build-arg=BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ') --build-arg=VCS_REF=$(git rev-parse HEAD) -t $IMAGE_NAME .
+docker build \
+       --build-arg BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ') \
+       --build-arg VCS_REF=$(git rev-parse HEAD) \
+       --build-arg VERSION=$(cat VERSION) \
+       -t $IMAGE_NAME .
