--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,11 +14,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag localgod/jmeter:$(date +%s)
     - name: Build, Tag, Push
       uses: mattdavis0351/actions/docker-gpr@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        image-name: localgod/jmeter:$(date +%s)
+        image-name: localgod/jmeter
+        dockerfile-location: ./Dockerfile
         tag: latest
