--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v3
+    - name: Set Variable using Shell Command
+      run: |
+          VERSION=$(cat ./VERSION)
+          echo "VERSION=$VERSION" >> "$GITHUB_ENV"
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
     - name: Login to DockerHub
@@ -20,7 +25,7 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Build and push Docker images
+    - name: Build and push Docker images with latest tag
       uses: docker/build-push-action@v5.1.0
       with:
         build-args: |
@@ -29,3 +34,13 @@ jobs:
           VERSION=$(cat VERSION)
         push: true
         tags: localgod/jmeter:latest
+    - name: Build and push Docker images with version tag
+      uses: docker/build-push-action@v5.1.0
+      with:
+        build-args: |
+          BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+          VCS_REF=$(git rev-parse HEAD)
+          VERSION=$(cat VERSION)
+        push: true
+        tags: localgod/jmeter:${{ env.VERSION }}
+
